stockroom 2/backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: rohithns
spec:
  selector:
    app: backend-deployement
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
