stockroom 2/backend/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: rohithns
spec:
  rules:
  - host: stockroom.local
    http:
        paths:
        - path: /health
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
        - path: /login
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
        - path: /me
          pathType: Prefix
          backend:
            service:
              name: backend-service
              port:
                number: 8080
